# llm-experiments

./: README.md  model_comparison_20250518_150035.csv  model_comparison_20250518_150552.csv  model_comparison_20250518_151152.csv  model_comparison_20250518_153545.csv  pyproject.toml  qwen_tester.py
